Compositor renders blank Render Layer from other Scenes #39643

Closed
opened 2014-04-08 12:59:31 +02:00 by Maverick · 10 comments

System Information
all

Blender Version
blender-2.70-6aa75d3-win64

Short description of error
All happens when you render by pressing the render button in the Compositor.
Two issues here:

1.Pressing the little Render button on a Render Layer in the compositor does render the layer.

But is shows a blank final result even though Compositing is disabled on other scenes.

2.While rendering a render layer the tiles are not shown.

Also the rendering text (time, memory, samples, etc) is missing.

Exact steps for others to reproduce the error
Check attached blend and image.

Thank you.

compo_compositing_bug.blend
blank_compo_layer.png

**System Information** all **Blender Version** blender-2.70-6aa75d3-win64 **Short description of error** All happens when you render by pressing the render button in the Compositor. Two issues here: # 1.Pressing the little Render button on a Render Layer in the compositor does render the layer. But is shows a blank final result even though Compositing is disabled on other scenes. # 2.While rendering a render layer the tiles are not shown. Also the rendering text (time, memory, samples, etc) is missing. **Exact steps for others to reproduce the error** Check attached blend and image. Thank you. [compo_compositing_bug.blend](https://archive.blender.org/developer/F84276/compo_compositing_bug.blend) ![blank_compo_layer.png](https://archive.blender.org/developer/F84277/blank_compo_layer.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dragostanasie

Added subscriber: @dragostanasie

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm the issue (and behavior in 2.69 is not better, even worse, actually, does not show at all render of layers).

Can confirm the issue (and behavior in 2.69 is not better, even worse, actually, does not show at all render of layers).
Sergey Sharybin self-assigned this 2014-04-10 18:06:08 +02:00

You wouldn't see the render result for another scene in the image editor when the render is done. This is a design limitation -- image editor shows render result for an active scene only.

Missing tiles highlight is indeed interesting issue and will look into it.

You wouldn't see the render result for another scene in the image editor when the render is done. This is a design limitation -- image editor shows render result for an active scene only. Missing tiles highlight is indeed interesting issue and will look into it.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Fixed the tiles in 64e7065. Missing display after the render is not a bug, but how current design works -- it displays render result of an active scene. Could be changed perhaps, but that'd be considered a TODO.

Thanks for the report, closing it now.

Fixed the tiles in 64e7065. Missing display after the render is not a bug, but how current design works -- it displays render result of an active scene. Could be changed perhaps, but that'd be considered a TODO. Thanks for the report, closing it now.
Author

Thank you sergey.

However, even though this is a design limitation, when you press the little Render Layer button in the Compositor, the artist expects to see that render layer.
Instead it show the final render of the active scene. This is confusing for the artist and it's perceived as a bug/issue.

This was so annoying that I had to report it. Hopefully it will be fixed as well.

Thank you sergey. However, even though this is a design limitation, when you press the little Render Layer button in the Compositor, the artist expects to see that render layer. Instead it show the final render of the active scene. This is confusing for the artist and it's perceived as a bug/issue. This was so annoying that I had to report it. Hopefully it will be fixed as well.

This is intended -- this way you can re-render the node in the compo and see the final compo result. Might not meet some particular expectation, but that's what it's intended to do -- always show final render for the active scene.

This is intended -- this way you can re-render the node in the compo and see the final compo result. Might not meet some particular expectation, but that's what it's intended to do -- always show final render for the active scene.
Author

In practice it happens that you are always interested in that render layer when you click the little button to rerender it and do not expect to see the final result of the active scene. Specially when other render layers have not been rendered yet the compo will just show blank or incorrect result.

Can live with it though, thank you.

In practice it happens that you are always interested in that render layer when you click the little button to rerender it and do not expect to see the final result of the active scene. Specially when other render layers have not been rendered yet the compo will just show blank or incorrect result. Can live with it though, thank you.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39643
No description provided.